Feat/google mobile (#61)
* chore: implemented mobile 0auth endpoint

* updated CI pipeline

---------
